--- a/exo/style.css
+++ b/exo/style.css
@@ -187,3 +187,59 @@ body > main > section > section:nth-of-type(2) > table > tbody > tr {
     font-size: 1rem;
     line-height: 2rem;
 }
+.open3 {
+    display:block;
+    
+}
+.clause3 {
+    display:none;
+}
+body > main > section:nth-of-type(2).open3 {
+    grid-column: 2 / 3 ;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+#delete {
+    height: 30%;
+    width: 50%;
+    background-color: white;
+    border-radius: 0.2rem;
+    padding: 2rem 1rem;
+    border: 2px solid #b50604;
+    box-shadow: 2px 2px 3px rgb(0 0 0 / 20%);
+    
+}
+#delete > h3 {
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
+#delete-btn {
+    font-size: 1.3rem;
+    padding: 1rem 2rem;
+    margin: 0 0.5rem;
+    background-color: #b50604;
+    color: white;
+    border: 2px solid #b50604;
+    border-radius: 0.3rem;
+}
+.cancel-btn {
+    font-size: 1.3rem;
+    padding: 1rem 2rem;
+    margin: 0 0.5rem;
+    background-color: transparent;
+    color: black;
+    border: 2px solid black;
+    border-radius: 0.3rem; 
+}
+#btns {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
